- Add IntRational and remove BigRational and LongRational - Remove Optional and use Maybe - Add computeValue to EditableAssociation