@@ -4,7 +4,6 @@ import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -26,9 +25,9 @@ public class ComparableTestCases {
         assertEquals(null, Comparables.min(4, 3, 2, null, 1, 7));
         assertEquals(3, Comparables.min(4, 3));
         assertEquals(null, Comparables.min((Integer)null, null));
-        assertEquals(Optional.of(2), Comparables.min(List.of(4, 3, 2, 6,  7)));
-        assertTrue(Comparables.min(Arrays.asList(4, 3, 2, 6, null, 7)).isEmpty());
-        assertTrue(Comparables.min(List.<Integer>of()).isEmpty());
+        assertEquals(Maybe.of(2), Comparables.min(List.of(4, 3, 2, 6,  7)));
+        assertTrue(Comparables.min(Arrays.asList(4, 3, 2, 6, null, 7)).isAbsent());
+        assertTrue(Comparables.min(List.<Integer>of()).isAbsent());
     }
 
     @Test
@@ -37,9 +36,9 @@ public class ComparableTestCases {
         assertEquals(7, Comparables.max(4, 3, 2, null, 1, 7));
         assertEquals(4, Comparables.max(4, 3));
         assertEquals(null, Comparables.max((Integer)null, null));
-        assertEquals(Optional.of(7), Comparables.max(List.of(4, 3, 2, 6,  7)));
+        assertEquals(Maybe.of(7), Comparables.max(List.of(4, 3, 2, 6,  7)));
         assertTrue(Comparables.max(Arrays.asList(4, 3, 2, 6, null, 7)).isPresent());
-        assertTrue(Comparables.max(Arrays.<Integer>asList(null, null)).isEmpty());
-        assertTrue(Comparables.max(List.<Integer>of()).isEmpty());
+        assertTrue(Comparables.max(Arrays.<Integer>asList(null, null)).isAbsent());
+        assertTrue(Comparables.max(List.<Integer>of()).isAbsent());
     }
 }
